# auto-yt-dlp

./: .gitignore  MANIFEST.in  README.md  eel.js  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi_publish.yaml  testpypi_publish.yaml
auto_yt_dlp/: __init__.py  __main__.py  config.py  ui.py  utils.py
auto_yt_dlp/web/: index.html
auto_yt_dlp/web/scripts/: checker.js  dialog.js  main.js  utils.js
auto_yt_dlp/web/styles/: main.css
