[build-system]
requires = ["setuptools>=67.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["auto_yt_dlp"]

[project]
name = "auto-yt-dlp"
authors = [{name = "SubFabula"}]
keywords = ["gui", "media-downloader"]
dynamic = ["version"]
requires-python = "==3.13"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
]
readme = "README.md"
description = '"A feature-rich command-line audio/video downloader" "...with a simple graphical interface".'
dependencies = [
  "yt-dlp",
  "pywebview",
  "qtpy",
  "PySide6>=6.9.0",
]

[tool.external-dependencies]
ffmpeg = ">=5.0"

[project.scripts]
autoytdlp = "auto_yt_dlp.__main__:run"
auto-yt-dlp = "auto_yt_dlp.__main__:run"
auto_yt_dlp = "auto_yt_dlp.__main__:run"

[project.urls]
"Source Code" = "https://github.com/SubFabula/auto-yt-dlp"
"Bug Tracker" = "https://github.com/SubFabula/auto-yt-dlp/issues"
"Q&A" = "https://github.com/SubFabula/auto-yt-dlp/discussions"